# snowflake-cicd

./: .gitignore  LICENSE.txt  README.md  cicd.bat  cicd.py  cicd.sh  config.ini  conn.ini-sample  setup.cfg
model-repo-sample/: .conn.ini
model-repo-sample/model/public/tables/: public_dwh_releases_history.sql
model-repo-sample/releases/: README.md
script/: config.ini  requirements.txt
script/utils/: config.py  decorators.py  dwhrepo.py  log.py  model.py  release.py  snowflake.py  sql.py
src/cicd/: __init__.py  __main__.py  cicd.py  config.ini
src/cicd/utils/: config.py  dwhrepo.py  log.py  model.py  release.py  snowflake.py  sql.py  utils.py
utils/: config.py  dwhrepo.py  release.py  snowflake.py
