[metadata]
name = snowflake-cicd
version = 0.1.1
description = Snowflake CI/CD utility
long_description = file: README.md
description_file = README.md
keywords = snowflake, cicd
license = MIT
download_url = https://github.com/szn/snowflake-cicd/archive/refs/tags/v0.1.1.tar.gz
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
author = Szymon Nieradka

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    importlib; python_version == "3.7"
    GitPython
    snowflake-connector-python
    coloredlogs
    sqlparse
    termcolor

[options.package_data]
* = *.ini

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cicd = cicd.cicd:main